--- a/index.html
+++ b/index.html
@@ -238,21 +238,22 @@ footer p:last-child {
 </head>
 <body>
     <header>
-        <h1>Birth, Rebirth and  Landscapes <br> </h1>
-        <p class="header-description">  <br> Landscapes that are created using elements: Egg, Earth , heat and vacuum. </p>
+        <h1>Just Married<br>Kalpana and Anand <br> 1965-2025
+        </h1>
+        <p class="header-description"> Every alternate weekend, from April 1962 to 1965, Anand Mathur boarded a train from Jamalpur to Kolkata, bound for a date with Kalpana. Miles melted beneath the wheels, and time stood still in those moments they carved out for each other.
+
+   <br> </p>
     </header>
     <p>
-    An Invitation to celebrate Love, Time, and Memories
-
-Every alternate weekend, from April 1962 to 1965, Anand Mathur boarded a train from Jamalpur to Kolkata, bound for a date with Kalpana. Miles melted beneath the wheels, and time stood still in those moments they carved out for each other.
+    
 
   </p>
     <div class="video-container">
         <!-- Image 1 -->
         <div class="video-item">
-            <img src="image1.jpeg" alt="Hiranya Garbha" class="poster" onclick="toggleDescription(0)">
+            <img src="IMG_4270.png" alt="Hiranya Garbha" class="poster" onclick="toggleDescription(0)">
             <div class="video-caption">
-                Image 1: 60x 60 cm<br>Pristine fields  <br>
+                  <br>
                 <span class="more-info" onclick="toggleDescription(0)">More Info</span>
             </div>
 
@@ -261,9 +262,9 @@ Every alternate weekend, from April 1962 to 1965, Anand Mathur boarded a train f
 
 And what better way to honor this milestone than with a celebration that lasts the whole year?
 
-You are invited—not just to remember, but to relive, to rejoice, and to share in the love that has carried them through six decades.
+    <br>You are invited—not just to remember, but to relive, to rejoice, and to share in the love that has carried them through six decades.
 
-And yes, we are asking for a gift—the gift of your time. 
+    <br>And yes, we are asking for a gift—the gift of your time. 
 A date with them, just as they had with each other from 1962 to 1965. 
 Please select a date from the calendar below and bring a letter, a note , a memory to celebrate a story that                    began on the (rail) tracks of time and flew into the next 6 decades …  think of something more to end…
   
