--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
             box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
         }
 
+        p {
+    color: #929292;
+}
+
         .more-info {
             cursor: pointer;
             color: #929292;
