--- a/index.html
+++ b/index.html
@@ -128,15 +128,17 @@
             <img src="IMG_4270.png" alt="Hiranya Garbha" class="poster" onclick="toggleDescription(0)">
             <div class="video-caption">
                 <br>
-                <span class="more-info" onclick="toggleDescription(0)">More Info</span>
+                
             </div>
             <p>
                 This year, on the 9th of May, we celebrate the 60th anniversary of the day that ended those legendary dates and began a journey of lifetime love.
+  <br>
+                <img src="wedding.jpg" alt="Hiranya Garbha" class="poster" onclick="toggleDescription(0)">
+             
                 <br>You are invited—not just to remember, but to relive, to rejoice, and to share in the love that has carried them through six decades.
                 <br>And yes, we are asking for a gift—the gift of your time.
             </p>
-            <div class="video-description" id="description-0">
-                <p>Calendar</p>
+             <p>Calendar</p>
             </div>
         </div>
 
