--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <p>
                 This year, on the 9th of May, we celebrate the 60th anniversary of the day that ended those legendary dates and began a journey of lifetime love.
   <br>
-                <img src="wedding.jpg" alt="Hiranya Garbha" class="poster" onclick="toggleDescription(0)">
+                <img src="Wedding.gif" alt="Hiranya Garbha" class="poster" onclick="toggleDescription(0)">
              
                 <br>You are invited—not just to remember, but to relive, to rejoice, and to share in the love that has carried them through six decades.
                 <br>And yes, we are asking for a gift—the gift of your time.
