--- a/index.html
+++ b/index.html
@@ -144,18 +144,20 @@
             background-color: #5c5c5c;
         }
 
-        .close-button {
+        /* Common button styles for both buttons */
+        button {
             background-color: #929292;  /* Set to match font color */
             color: #4c4c4c;  /* Set text color to contrast */
             border: none;
             padding: 12px 30px;
-            margin-top: 20px;
             cursor: pointer;
             border-radius: 5px;
             font-size: 18px;
+            margin: 10px;
+            transition: background-color 0.3s ease;
         }
 
-        .close-button:hover {
+        button:hover {
             background-color: #7a7a7a;
         }
 
