--- a/index.html
+++ b/index.html
@@ -137,14 +137,15 @@
             background-color: #f0f0f0;
         }
 
+        /* Styling for the Select button */
         .calendar-popup button {
             background-color: #929292;
             color: white;
-            padding: 10px 15px;
+            padding: 15px 20px; /* increased padding for a larger button */
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            font-size: 16px;
+            font-size: 18px;
             width: 100%;
             margin-top: 10px;
         }
@@ -225,7 +226,7 @@
             <li onclick="submitDate('Sun, 12 Apr 2026 - London')">Sun, 12 Apr 2026 - London</li>
             <li onclick="submitDate('Sun, 26 Apr 2026 - London')">Sun, 26 Apr 2026 - London</li>
         </ul>
-        <button class="select-button" onclick="closeCalendar()">Select</button>
+        <button id="calendar-button" class="select-button" onclick="selectDate()">Select</button>
     </div>
 
     <footer>
@@ -243,11 +244,17 @@
             document.getElementById('calendar-popup').style.display = 'none';
         }
 
-        // Submit selected date
+        // Submit the selected date, send email with selected date
         function submitDate(date) {
-            alert("You selected: " + date);
+            document.getElementById('calendar-button').innerText = "Select";
+            var email = "mailto:your-email@example.com?subject=Selected%20Date&body=I%20would%20like%20to%20confirm%20the%20date:%20" + encodeURIComponent(date);
+            window.location.href = email;
+        }
+
+        // Update button text to "Select"
+        function selectDate() {
+            document.getElementById('calendar-button').innerText = "Select";
             closeCalendar();
-            document.querySelector('.select-button').innerText = "Select";
         }
     </script>
 </body>
