--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
         /* Styling for the calendar popup */
         .calendar-popup {
             display: none;
-            background-color: white;
+            background-color: #4c4c4c;
+            color: #929292;
             position: fixed;
             top: 50%;
             left: 50%;
@@ -140,6 +141,17 @@
             background-color: #f0f0f0;
         }
 
+button {
+    background-color: #929292; /* Button color */
+    color: white; /* Text color */
+    padding: 15px 25px; /* Increase padding to make it bigger */
+    font-size: 20px; /* Increase font size if necessary */
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 20px;
+}
+        
         /* Styling for the buttons */
         .calendar-popup button {
             background-color: #929292;
