--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ button {
 
         // Submit the selected date, send email with selected date
         function submitDate(date) {
-            document.getElementById('calendar-button').innerText = "Select";
+            document.getElementById('calendar-button').innerText = "x";
             var email = "mailto:your-email@example.com?subject=Selected%20Date&body=I%20would%20like%20to%20confirm%20the%20date:%20" + encodeURIComponent(date);
             window.location.href = email;
         }
