--- a/index.html
+++ b/index.html
@@ -205,10 +205,10 @@ button {
                 <br>
                 Please arrange a date with them, just as they did with each other from 1962 to 1965.
                 <br>
-                The calendar below is open, and we would love for you to bring a letter, a note, or a memory that celebrates your moments with them—
+                 We would love for you to select a date below and bring a letter, a note, or a memory with them which you cherish—
                 moments that began on the tracks of time and have flown through the past six decades.
             </p>
-            <p>Calendar</p>
+          
             <button onclick="openCalendar()">View Available Dates</button>
         </div>
     </div>
