--- a/index.html
+++ b/index.html
@@ -262,14 +262,14 @@ button {
 
         // Submit the selected date, send email with selected date
         function submitDate(date) {
-            document.getElementById('calendar-button').innerText = "Select";
-            var email = "mailto:your-email@example.com?subject=Selected%20Date&body=I%20would%20like%20to%20confirm%20the%20date:%20" + encodeURIComponent(date);
+            document.getElementById('calendar-button').innerText = "X";
+            var email = "mailto:your-anandkalpana@gmail.com?subject=Selected%20Date&body=I%20would%20like%20to%20confirm%20the%20date:%20" + encodeURIComponent(date);
             window.location.href = email;
         }
 
         // Update button text to "Select"
         function selectDate() {
-            document.getElementById('calendar-button').innerText = "Select";
+            document.getElementById('calendar-button').innerText = "close";
             closeCalendar();
         }
     </script>
