--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     z-index: 1000;
     max-width: 600px; /* Increase max-width */
     width: 90%; /* Set a percentage to make it responsive */
-    min-height: 300px; /* Optional - add a minimum height */
+    min-height: 400px; /* Optional - add a minimum height */
 }
 
         .calendar-popup ul {
@@ -173,6 +173,9 @@ button {
         .calendar-popup .close-button {
             background-color: #929292;
         }
+        .calendar-popup {
+    overflow-y: auto; /* Add vertical scrolling */
+}
 
     </style>
 </head>
