--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ button {
         <p> </p>
     </footer>
 
- script>
+ <script>
         // Open the calendar popup
         function openCalendar() {
             document.getElementById('calendar-popup').style.display = 'block';
