--- a/index.html
+++ b/index.html
@@ -107,29 +107,29 @@
         }
 
         /* Styling for the calendar popup */
-      .calendar-popup {
-    display: none;
-    background-color: #4c4c4c;
-    color: #929292;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 30px; /* Increase padding for more internal space */
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    z-index: 1000;
-    max-width: 600px; /* Increase max-width */
-    width: 90%; /* Set a percentage to make it responsive */
-    min-height: 400px; /* Optional - add a minimum height */
-}
+        .calendar-popup {
+            display: none;
+            background-color: #4c4c4c;
+            color: #929292;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            z-index: 1000;
+            max-width: 600px;
+            width: 90%;
+            min-height: 400px;
+        }
 
         .calendar-popup ul {
             list-style-type: none;
             padding: 0;
             margin: 0;
             max-height: 300px;
-            overflow-y: auto; /* Enables scrolling when the list exceeds the height */
+            overflow-y: auto;
         }
 
         .calendar-popup li {
@@ -142,22 +142,22 @@
             background-color: #f0f0f0;
         }
 
-button {
-    background-color: #929292; /* Button color */
-    color: white; /* Text color */
-    padding: 15px 25px; /* Increase padding to make it bigger */
-    font-size: 20px; /* Increase font size if necessary */
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-top: 20px;
-}
-        
+        button {
+            background-color: #929292;
+            color: white;
+            padding: 15px 25px;
+            font-size: 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            margin-top: 20px;
+        }
+
         /* Styling for the buttons */
         .calendar-popup button {
             background-color: #929292;
             color: white;
-            padding: 15px 20px; /* Ensuring button size is big enough */
+            padding: 15px 20px;
             border: none;
             border-radius: 5px;
             cursor: pointer;
@@ -173,10 +173,10 @@ button {
         .calendar-popup .close-button {
             background-color: #929292;
         }
-        .calendar-popup {
-    overflow-y: auto; /* Add vertical scrolling */
-}
 
+        .calendar-popup {
+            overflow-y: auto;
+        }
     </style>
 </head>
 <body>
@@ -212,7 +212,7 @@ button {
                 moments that began on the tracks of time and have flown through the past six decades.
             </p>
           
-            <button onclick="openCalendar()">View Available Dates</button>
+            <button id="calendar-button" onclick="openCalendar()">Select a date above</button>
         </div>
     </div>
 
@@ -246,35 +246,62 @@ button {
             <li onclick="submitDate('Sun, 26 Apr 2026 - London')">Sun, 26 Apr 2026 - London</li>
         </ul>
         <button id="calendar-button" class="select-button" onclick="selectDate()">Select</button>
+        <button class="close-button" onclick="closeCalendar()">Close</button>
     </div>
 
     <footer>
         <p> </p>
     </footer>
 
- <script>
+    <script>
         // Open the calendar popup
         function openCalendar() {
             document.getElementById('calendar-popup').style.display = 'block';
+            document.getElementById('calendar-button').innerText = 'Select a date above';
         }
 
-        // Close the calendar popup
+             // Close the calendar popup
         function closeCalendar() {
             document.getElementById('calendar-popup').style.display = 'none';
         }
 
-        // Submit the selected date, send email with selected date
+        // Function to submit the selected date
         function submitDate(date) {
-            document.getElementById('calendar-button').innerText = "Select";
-            var email = "mailto:your-anandkalpana@gmail.com?subject=Selected%20Date&body=I%20would%20like%20to%20confirm%20the%20date:%20" + encodeURIComponent(date);
-            window.location.href = email;
+            const selectedDate = date;
+            alert("You have selected: " + selectedDate);
+            closeCalendar();  // Close the popup after selecting the date
         }
 
-        // Update button text to "Select"
+        // Function to select the date from the list
         function selectDate() {
-            document.getElementById('calendar-button').innerText = "close";
+            const selectedDate = document.querySelector('.selected-date');
+            if (selectedDate) {
+                alert("You have selected: " + selectedDate.innerText);
+            } else {
+                alert("Please select a date first.");
+            }
             closeCalendar();
         }
-    </script>  
+
+        // Handle the video description toggling (you can modify this function based on how you want to handle descriptions)
+        function toggleDescription(index) {
+            const descriptions = document.getElementsByClassName('video-description');
+            for (let i = 0; i < descriptions.length; i++) {
+                if (i === index) {
+                    descriptions[i].style.display = descriptions[i].style.display === 'none' ? 'block' : 'none';
+                } else {
+                    descriptions[i].style.display = 'none';
+                }
+            }
+        }
+
+        // Event listener for selecting the date
+        document.querySelectorAll('.date-list li').forEach(function(item) {
+            item.addEventListener('click', function() {
+                item.classList.toggle('selected-date');
+            });
+        });
+    </script>
+
 </body>
 </html>
