--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 <body>
 
     <header>
-        <h1>Just Married<br>Kalpana and Anand</h1>
+        <h1>Diamond Jubilee <br>Kalpana and Anand</h1>
         <p class="header-description">1965-2025
          <br>
         <br>
@@ -195,14 +195,15 @@
                 This year, we celebrate the 60th anniversary of the day that ended those legendary dates and began a journey of lifetime love.
                 <br>
                 <img src="Wedding.gif" alt="Hiranya Garbha" class="poster" onclick="toggleDescription(0)">
-                <br>You are invited —not just to remember, but to relive, to rejoice, and to share in the love that has carried them through six decades.
-                <br>And yes, we are asking for a gift—the gift of your time.
+                <br>You are invited — to relive, to rejoice, and to share in the love that has carried them through six decades.
+                <br>And yes, we are asking for a gift. 
+               <br> The gift of your time.
                 <br>
                 <br>
                 Please arrange a date with them, just as they did with each other from 1962 to 1965.
                 <br>
-                We would love for you to select a date below and bring a letter, a note, or a memory with them which you cherish—
-                moments that began on the tracks of time and have flown through the past six decades.
+                We would love for you to select a date below and bring a letter or recounta meoment with them which you cherish—
+                moments on the tracks of time that have flown through the past six decades.
             </p>
           
             <button onclick="openCalendar()">View Available Dates</button>
