--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 
         // Submit the selected date, send email with selected date
         function submitDate(date) {
-            var email = "mailto:your-anandkalpana@gmail.com?subject=Selected%20Date&body=I%20would%20like%20to%20confirm%20the%20date:%20" + encodeURIComponent(date);
+            var email = "mailto:your-kalpanaanandmathur@gmail.com?subject=Selected%20Date&body=I%20would%20like%20to%20confirm%20the%20date:%20" + encodeURIComponent(date);
             window.location.href = email;
             closeCalendar();  // Close the popup after sending email
         }
