--- a/index.html
+++ b/index.html
@@ -205,8 +205,7 @@
                 <br>
                 Please arrange a date with them, just as they did with each other from 1962 to 1965.
                 <br>
-                We would love for you to select a date below and bring a letter or recounta meoment with them which you cherish—
-                moments on the tracks of time that have flown through the past six decades.
+               We would love for you to select a date below and bring a letter or share a cherished memory—moments on the tracks of time as six decades have flown by.
             </p>
           
             <button onclick="openCalendar()">View Available Dates</button>
