--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !important;
-            background-color: #4c4c4c;
+            background-color: #C70039;
             margin: 0;
             padding: 0;
             font-size: 20px;
