--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
             text-align: left;
             padding: 10px;
             border: 1px solid #4c4c4c;
-            background-color: #4c4c4c;
-            color: #929292;
+            background-color: #900C3F;
+            color: #900C3F;
             border-radius: 5px;
             box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
         }
@@ -136,7 +136,7 @@
 
         button {
             background-color: #929292; /* Button color */
-            color: white; /* Text color */
+            color: #900C3F; /* Text color */
             padding: 15px 25px; /* Increase padding to make it bigger */
             font-size: 20px; /* Increase font size if necessary */
             border: none;
@@ -148,7 +148,7 @@
         /* Styling for the buttons */
         .calendar-popup button {
             background-color: #929292;
-            color: white;
+            color: #900C3F;
             padding: 15px 20px; /* Ensuring button size is big enough */
             border: none;
             border-radius: 5px;
@@ -244,9 +244,7 @@
         <button id="calendar-button" class="select-button" onclick="closeCalendar()">Close</button>
     </div>
 
-    <footer>
-        <p> </p>
-    </footer>
+    
 
     <script>
         // Open the calendar popup
