--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }
 
         header, footer {
-            background-color: #4c4c4c;
+            background-color: #900C3F;
             color: #929292;
             text-align: center;
             padding: 10px;
@@ -67,7 +67,7 @@
             margin-top: 10px;
             text-align: center;
             cursor: pointer;
-            background-color: #4c4c4c;
+            background-color: #900C3F;
             color: #929292;
             padding: 10px;
             border-radius: 5px;
@@ -88,15 +88,7 @@
             color: #929292;
         }
 
-        .more-info {
-            cursor: pointer;
-            color: #929292;
-            text-align: center;
-            background-color: #4c4c4c;
-            padding: 5px;
-            border-radius: 5px;
-            margin-top: 10px;
-        }
+      
 
         /* Styling for the calendar popup */
         .calendar-popup {
