--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <p class="header-description">1965-2025
          <br>
         <br>
-        Every alternate weekend, from April 1962 to 1965, Anand Mathur boarded a train from Jamalpur to Kolkata, bound for a date with Kalpana. Miles melted beneath the wheels, and time stood still in those moments they carved out for each other.
+     
         </p>
     </header>
 
@@ -183,7 +183,8 @@
             <div class="video-caption">
             </div>
             <p>
-                This year, we celebrate the 60th anniversary of the day that ended those legendary dates and began a journey of lifetime love.
+            Every alternate weekend, from April 1962 to 1965, Anand Mathur boarded a train from Jamalpur to Kolkata, bound for a date with Kalpana. Miles melted beneath the wheels, and time stood still in those moments they carved out for each other.
+                   <br> This year, we celebrate the 60th anniversary of the day that ended those legendary dates and began a journey of lifetime love.
                 <br>  </p>
                   <div class="video-item">
                 <img src="Wedding.gif" alt="Hiranya Garbha" class="poster" onclick="toggleDescription(0)">
