--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
              <p>
             Every alternate weekend, from April 1962 to 1965, Anand Mathur boarded a train from Jamalpur to Kolkata, bound for a date with Kalpana. Miles melted beneath the wheels, and time stood still in those moments they carved out for each other.
               </p>       
-            <img src="IMG_4270.png" alt="Hiranya Garbha" class="poster" onclick="toggleDescription(0)">
+            <img src="IMG_4270.jpeg" alt="Hiranya Garbha" class="poster" onclick="toggleDescription(0)">
             <div class="video-caption">
             </div>
                <p> 
